# donecheck

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  SECURITY.md  action.yml  donecheck.py  pyproject.toml  test_donecheck.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: failure-pattern.yml
.github/workflows/: ci.yml
skills/donecheck/: SKILL.md
