[project]
name = "donecheck"
version = "0.1.8"
description = "Your coding agent says it is done. Make it prove it."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Atharva Maik" }]
keywords = ["ai", "agents", "codex", "claude-code", "code-review", "verification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/AtharvaMaik/donecheck"
Repository = "https://github.com/AtharvaMaik/donecheck"
Issues = "https://github.com/AtharvaMaik/donecheck/issues"
"GitHub Marketplace" = "https://github.com/marketplace/actions/donecheck"

[project.scripts]
donecheck = "donecheck:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["donecheck"]
